fix image overflow on admin product

--- a/react-vite/src/components/Products/ManageProducts/AdminProductItem/AdminProductItem.module.css
+++ b/react-vite/src/components/Products/ManageProducts/AdminProductItem/AdminProductItem.module.css
@@ -23,7 +23,7 @@
 .adminProduct__img {
     width: 214px;
     height: 225px;
-    object-fit: cover;
+    object-fit: fill;
     margin-right: 20px;
 }
 
